feat: implement Google Drive to WordPress automation system
- Add Express.js server with cron endpoint
- Implement Google Drive file monitoring
- Add WordPress draft post creation
- Set up Prisma database with Job state management
- Add job runner with complete pipeline
- Configure TypeScript with tsx for development
- Add .gitignore for sensitive files

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,9 @@ VERTEX_PROJECT_ID=""
 VERTEX_LOCATION="us-central1"
 
 # WordPress
-WP_API_URL=""
-WP_USERNAME=""
-WP_PASSWORD=""
+WP_API_URL="https://shmmoscow.ru"
+WP_USERNAME="master"
+WP_APP_PASSWORD=""
 
 # Cron Job Security
 CRON_SECRET=""
