--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
@@ -24,26 +24,29 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "googleapis": "^144.0.0",
+    "@types/express": "^5.0.5",
     "axios": "^1.7.7",
-    "mammoth": "^1.8.0",
     "dompurify": "^3.1.7",
-    "jsdom": "^25.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^5.1.0",
+    "googleapis": "^144.0.0",
     "handlebars": "^4.7.8",
-    "dotenv": "^16.4.5"
+    "jsdom": "^25.0.1",
+    "mammoth": "^1.8.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.8.6",
-    "prisma": "^5.22.0",
-    "ts-node": "^10.9.2",
-    "eslint": "^8.57.1",
-    "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "prettier": "^3.3.3",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "@types/dompurify": "^3.0.5",
-    "@types/jsdom": "^21.1.7"
+    "prettier": "^3.3.3",
+    "prisma": "^5.22.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.6.3"
   }
 }
