--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "@google-cloud/aiplatform": "^5.12.0",
     "@prisma/client": "^5.22.0",
+    "@types/cheerio": "^0.22.35",
     "@types/express": "^5.0.5",
     "axios": "^1.7.7",
+    "cheerio": "^1.1.2",
     "dompurify": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
